objects/User.object
<CustomObject>
    <fields>
        <fullName>Queue_Lead_Assignment__c</fullName>
        <label>Queue Lead Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L1 Team Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2 Team Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2 Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3 Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone System (PBX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Outside Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-CMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-Graphic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-WAMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <formula>Manager.FirstName &amp;&quot; &quot;&amp; Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Case_Record_Type__c</fullName>
        <formula>CASE(Business_Unit__c,
&quot;VIN&quot;,&quot;01270000000QCj0&quot;,
&quot;VAT&quot;,&quot;01270000000QCiv&quot;,
&quot;HAY&quot;,&quot;01270000000QCj5&quot;,
&quot;&quot;)</formula>
        <label>SF Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SF Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesNexus_ID__c</fullName>
        <label>SalesNexusUserID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salespersons_EXT__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salespersons EXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Scheduled_Hour_Count__c</fullName>
        <inlineHelpText>The total number of hours scheduled to be worked by this employee on Saturdays.</inlineHelpText>
        <label>Saturday Scheduled Hour Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Activities__c</fullName>
        <formula>HYPERLINK(&apos;/00O70000002mLRv?pv0=&apos;+ FirstName +&apos; &apos;+ LastName , &apos;Click Here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Cases__c</fullName>
        <formula>HYPERLINK(&apos;/00O70000002mLSo?pv0=&apos;+ FirstName+&apos; &apos;+LastName , &apos;Click Here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Projects_and_Pieces__c</fullName>
        <formula>HYPERLINK(&apos;/00O70000002mLSZ?pv0=&apos;+Id+&apos;&amp;pv1=&apos;+FirstName+&apos; &apos;+LastName+&apos;&amp;pv3=&apos;+Id+&apos;&amp;pv4=&apos;+FirstName+&apos; &apos;+LastName,&apos;Click Here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Projects and Pieces</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Squad_Name__c</fullName>
        <label>Squad Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <label>Start Hour</label>
        <picklist>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunday_Scheduled_Hour_Count__c</fullName>
        <inlineHelpText>The total number of hours scheduled to be worked by this employee on Sundays.</inlineHelpText>
        <label>Sunday Scheduled Hour Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Lead__c</fullName>
        <label>Team Lead</label>
        <relationshipName>Team_Lead</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <inlineHelpText>used for Sales and Implementation for reporting</inlineHelpText>
        <label>Team Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <picklist>
            <picklistValues>
                <fullName>Great Lakes - 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid States - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest - 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest - 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cali - 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mtn West - 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England - 9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>The total number of hours scheduled to be worked by this employee on Thursdays.</inlineHelpText>
        <label>Thursday Scheduled Hour Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Arranger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Arranger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Financer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Financer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday_Scheduled_Hour_Count__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>The total number of hours scheduled to be worked by this employee on Tuesdays.</inlineHelpText>
        <label>Tuesday Scheduled Hour Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VS_Assigned_Mobile__c</fullName>
        <inlineHelpText>enter the mobile number for your VinSolutions provided mobile phone</inlineHelpText>
        <label>VS Assigned Mobile #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VinCamera_Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VinCamera Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday_Scheduled_Hour_Count__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>The total number of hours scheduled to be worked by this employee on Wednesdays.</inlineHelpText>
        <label>Wednesday Scheduled Hour Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Welcome_Packet_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Packet Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bread &amp; Butter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat &amp; Potatoes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>The Whole Enchilada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Generation</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send EchoSign agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send EchoSign agreements on behalf of this user.</inlineHelpText>
        <label>EchoSign - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>EchoSign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__LanguageLocale__c</fullName>
        <description>This field stored the copied language locale for use in its package</description>
        <label>LanguageLocale</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Nitro_Quota__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The Nitro Quota for whatever Time Frame was configured in Nitro.</description>
        <label>Nitro Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MARKETING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>portal,chatter,disabled,platform</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>platform,queue</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers_Marketing</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>marketing</value>
        </filters>
        <label>Active Users-Marketing</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers_Not</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>portal,platform chatter,force</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>vinsolutions</value>
        </filters>
        <label>Active Users-Not Platform</label>
    </listViews>
    <listViews>
        <fullName>Active_vAuto_Users_Sales</fullName>
        <booleanFilter>1 AND 2 AND 3 and 4</booleanFilter>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>User_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>platform,queue</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VAT</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>portal,chatter</value>
        </filters>
        <label>Active vAuto Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>customer</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>customer</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Chatter_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Chatter</value>
        </filters>
        <label>Chatter Users</label>
    </listViews>
    <listViews>
        <fullName>Creative_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>MANAGER</columns>
        <columns>PTO_Approver__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>creative,fulfillment,website</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Creative Users</label>
        <sharedTo>
            <group>SalesforceAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Creative_Users_Temp</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>creative,fulfillment</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Creative Users Temp</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>SalesforceAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Disabled_Active_Users</fullName>
        <booleanFilter>(1 AND 2) or 3</booleanFilter>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>MANAGER</columns>
        <columns>PTO_Approver__c</columns>
        <columns>Queue_Lead_Assignment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>disabled</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Disabled Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Find_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Delegated_Approver_2__c</columns>
        <columns>PTO_Approver__c</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>CORE.USERS.CELL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>lentz</value>
        </filters>
        <label>Find Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Frozen_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen Users</label>
        <sharedTo>
            <role>ProcessDevelopmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Frozen_Users_Deactivated</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Disabled Platform User</value>
        </filters>
        <label>Frozen Users / Deactivated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Frozen_Users_Not_Deactivated</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>User_License__c</field>
            <operation>equals</operation>
            <value>Salesforce</value>
        </filters>
        <label>Frozen Users / Not Deactivated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Haystak_Sales_Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Team_Name__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Haystak</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>regional,sales</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>disabled</value>
        </filters>
        <label>Haystak Sales Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Email</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (Email) &amp;&amp;
!CONTAINS(LOWER($Profile.Name), &quot;admin&quot;) &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>*** Error: Insufficient Privileges, you cannot change your Email. ***</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Reports_To</fullName>
        <active>true</active>
        <description>To update the &quot;Reports To&quot; field a PAN must be submitted and Approved. Once the PAN has been approved, the Salesforce Team will update this field</description>
        <errorConditionFormula>ISCHANGED (Reports_To__c ) &amp;&amp;
!OR(
      $User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Angel Bourret*/
      $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Business Analyst*/
      $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/
      $User.UserRoleId = &quot;00E70000001GE8B&quot; /*Salesforce Developer*/
) &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>To update the &quot;Reports To&quot; field, the request must pass through HR. HR will then pass on the request to the Salesforce team once it has been verified and approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Community_User_Cannot_edit_Name_or_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED( Email ),ISCHANGED( FirstName ) ,ISCHANGED(  LastName )) , $Profile.Id =&quot;00e19000000Lw44&quot;)</errorConditionFormula>
        <errorMessage>Please Contact Your Administrator To Update Information. Thank You</errorMessage>
    </validationRules>
</CustomObject>